added google forms URLs. Still working on About Us page. Made some small style changes to the span tag in experience_profile.

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -11,7 +11,7 @@
             <div id="exp-title">
                 <h1>{{ experience.title }}</h1>
             </div>
-            <div id="img-gallery"> <!-- I need to talk to chong han about this.. I am confused -->
+            <div id="img-gallery"> 
                 <div id="exp-main-image" class="image-wrapper"></div>
                 <div id="exp-thumbs">
                 
@@ -139,7 +139,7 @@
                     <option>10</option>
                 </select>
                 </span><br /><br />
-                <a href="google form goes here" id="book-now" class="button green">I want it!</a>
+                <a href="https://docs.google.com/spreadsheet/viewform?formkey=dDhpaXByU3ZzeG1ZdWNXb25iaC0zZEE6MQ" id="book-now" class="button green">I want it!</a>
             </div><!-- close buy-now section -->
             
             <div id="merchant-listing" class="section">
