--- a/xperiences/templates/about.html
+++ b/xperiences/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ experience.title }}{% endblock %}
+{% block title %}About Neighborly Meals{% endblock %}
 
 {% block content %}
 
@@ -17,8 +17,8 @@
     <div id="t-shirt-blurb"><p>We saw a t-shirt for sale.
     It read: "home cooking is hurting the restaurant industry". We figured,
     heck, let's give them a run for it!<br />
-    <img width="330" height="226" alt="home cooking is hurting the restaurant
-    industry" src="{{ MEDIA_URL }}images/about.png"><br /> Of course, we love
+    <!--<img width="330" height="226" alt="home cooking is hurting the restaurant
+    industry" src="{{ MEDIA_URL }}images/about.png">-->Of course, we love
     restaurants. But there is so much more happening the in the peoples'
     kitchen, as the listings on this site already attest.</p></div> <div
     id="feed-the-movement-blurb"><p>We've also been blown away by this project:
@@ -28,8 +28,9 @@
     src="http://www.youtube.com/embed/fA7IaROkcU4" frameborder="0"
     allowfullscreen></iframe> </div> <p> Let us stretch out our hands and
     identify like minded peers. Let's support the famermers and the cooks.<br
-    /><br /> Please let us know if you know someone that would be perfect for
-    this site. Hope you enjoy it!</p>
+    /><br /> Please <a href="https://docs.google.com/spreadsheet/viewform?formkey=dGFQMUdZN21WRXBIT3ZGWXFrQXRGclE6MQ">
+    let us know</a> if you know someone that would be perfect for this site.
+    Hope you enjoy it!</p>
     
  
 </article>
