--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -84,7 +84,7 @@
                     <a title="Terms" href="#">Terms</a>
                 </li>-->
                 <li>
-                    <a title="Contact" href="#">Contact</a>
+                    <a title="Contact" href="https://docs.google.com/spreadsheet/viewform?formkey=dGNtYVZGUFozal9Cb2xVd3N0Q3lDeEE6MQ">Contact</a>
                 </li>                      
             </ul>
         </div>
