--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -318,10 +318,14 @@ article#main-content .secondary {
 .secondary #buy-now {
 	margin-top: 5px;
 	padding: 15px;
+	position: relative;
 }
 
 .secondary #buy-now span {
 	margin-top: 10px;
+	position: absolute;
+	top: 10px;
+	right: 40px;
 }
 	
 .secondary #merchant-listing {
