changes to the about us page

--- a/xperiences/templates/about.html
+++ b/xperiences/templates/about.html
@@ -8,19 +8,12 @@
     <div id="about"><p>A shared meal is one of those experiences that defines
     what it means to be human.<br /> Eating together with family, friends and
     neighbors strengthens community, bridges cultures, and builds a robust local
-    economy.<br />The promise of industrialization was to improve access to
-    food. But this comes at a price: industry makes packaged food, whereas
-    people make real food. Sharing makes us more efficient. By following
-    the trail of food, from farm to table, across time and across cultures, we
-    hope to demistify the process of good food and make it more widely
-    available.</p></div>
-    <div id="t-shirt-blurb"><p>We saw a t-shirt for sale.
-    It read: "home cooking is hurting the restaurant industry". We figured,
-    heck, let's give them a run for it!<br />
-    <!--<img width="330" height="226" alt="home cooking is hurting the restaurant
-    industry" src="{{ MEDIA_URL }}images/about.png">-->Of course, we love
-    restaurants. But there is so much more happening the in the peoples'
-    kitchen, as the listings on this site already attest.</p></div> <div
+    economy.<br />We want to encourage more people to sit down to the table with
+    strangers and get up with friends.<br/>If you have friends, an appetite and
+    a desire to make your world a richer place, <a
+    href="https://docs.google.com/spreadsheet/viewform?formkey=dGFQMUdZN21WRXBIT3ZGWXFrQXRGclE6MQ">join
+    us.</a></p></div>
+    <!--<div
     id="feed-the-movement-blurb"><p>We've also been blown away by this project:
     Feed the Movement is a grassroots effort to organize a food supply chain
     from our region's small farms to the kitchens for the ongoing Occupy
@@ -30,7 +23,7 @@
     identify like minded peers. Let's support the famermers and the cooks.<br
     /><br /> Please <a href="https://docs.google.com/spreadsheet/viewform?formkey=dGFQMUdZN21WRXBIT3ZGWXFrQXRGclE6MQ">
     let us know</a> if you know someone that would be perfect for this site.
-    Hope you enjoy it!</p>
+    Hope you enjoy it!</p>-->
     
  
 </article>
@@ -40,4 +33,3 @@
  
 
  
-
