--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -8,9 +8,9 @@
     <form action="#" method="POST" enctype="multipart/form-data">
         <fieldset>
             <legend>Describe your offering</legend>    
-            <label>Title {{ form.title }}</label><br /><br />
+            <label>Title <input type="text" value maxlength="32" required="required" name="title"/></label><br /><br />
             <label>Description (tell us about your cooking, the setting, yourself... anything that helps tell your story)<br />
-            {{ form.description }}</label><br /><br />
+            <textarea rows="20" cols="50" id="description" required="required" name="description" class='ckeditor'></textarea></label><br /><br />
             <!--<label>Category
             <select name="category">
                 <option>Category 1</option>
@@ -27,23 +27,22 @@
         <fieldset>
             <legend>Tell your story visually</legend>    
             <label>Upload your images
-                {{ form.photo1 }}
-                {{ form.photo2 }}
-                {{ form.photo3 }}
-                {{ form.photo4 }}
-                {{ form.photo5 }}
+                <input type="file" name="image_1" size="20">
+                <input type="file" name="image_2" size="20">
+                <input type="file" name="image_3" size="20">
+                <input type="file" name="image_4" size="20">
+                <input type="file" name="image_5" size="20">
             </label><br /><br />
-            <label>Link to a video {{ form.video_link }}</label>
+            <label>Link to a video <input type="text" value maxlength="32" name="video_link"/></label>
         </fieldset>
         
         <br /><br />
         
         <fieldset>    
             <legend>Location</legend>
-            {{ form.use_saved_address }}
+            <input type="checkbox" name="use_saved_address" />Use my address<br />
             <address><!-- html 5 semantic markup -->
-                {{ form.address }}
-                <!--label>Address <input class="space_common" type="text" name="address"></label><br />
+                <label>Address <input class="space_common" type="text" name="address"></label><br />
                 <label>City  <input class="space_common" type="text" name="city"></label><br />
                 <label>State  
                     <select name="state">
@@ -57,12 +56,11 @@
                     </select>
                 </label><br />
                 <label>Zip-code<input class="space_common" type="text" name="zipcode"></label><br />
-                <label>Country  <!-- eveyrthing is going to be in the U.S. for now>
+                <label>Country  <!-- eveyrthing is going to be in the U.S. for now--> 
                     <select name="country">
                        <option>United States</option>
                     </select>
-                </label><br /-->
-                {{ form.xp_location }}
+                </label><br />
             </address><br />
         </fieldset>
         
