--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -24,7 +24,8 @@
         {% if category %}
             params['category'] = '{{ category }}';
         {% endif %}
-        $.get('/api/experiences//json',params,function(data)
+
+        $.get('/api/experiences/json',params,function(data)
         {
             $('#experience_item_template').tmpl(data).appendTo('ul.image-gallery');
         });
