--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -3,9 +3,9 @@
 {% block title %}{{ experience.title }}{% endblock %}
 
 {% block content %}
-        
-    
-        
+
+
+
     <article id="main-content">
         <div class="primary">
             <div id="exp-title">
@@ -14,19 +14,19 @@
             <div id="img-gallery"> <!-- I need to talk to chong han about this.. I am confused -->
                 <div id="exp-main-image" class="image-wrapper"></div>
                 <div id="exp-thumbs">
-                
+
                     {% if experience.photo1 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo1.url}}">{% endif %}
                     {% if experience.photo2 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo2.url}}">{% endif %}
                     {% if experience.photo3 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo3.url}}">{% endif %}
                     {% if experience.photo4 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo4.url}}">{% endif %}
                     {% if experience.photo5 %}<img class="exp-thumbs-img" alt="{{ experience.title }}" src="{{experience.photo5.url}}">{% endif %}
-               
-                </div><!-- close exp-thumbs -->  
+
+                </div><!-- close exp-thumbs -->
             </div><!-- close img-gallery -->
             <div id="exp-description">
                 {{ experience.description|safe }}
             </div><!-- close exp-description -->
-            
+
             <!-- there needs to be a loop here.. or disqus... not sure how this will work -->
             <div id="reviews">
                 <!--<h3> What People Say</h3>-->
@@ -40,10 +40,10 @@
                         <div id="reviewer-details">
                             <p>Na'ama Moran</p>
                             <p class="location">San-Francisco, CA</p>
-                        </div><!-- close reviewer-details -->    
+                        </div><!-- close reviewer-details -->
                     </div><!-- close reviewer-wrap-->
                     <div id="ratings"><img width: 60px src="{{ MEDIA_URL }}/images/stars.png"></div><!-- close ratings -->
-                </div><!-- close reviewer listing -->    
+                </div><!-- close reviewer listing -->
                 <div id="review-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit. Vivamus eleifend rutrum porta. Integer magna sem,
@@ -56,37 +56,9 @@
                     fermentum, turpis odio convallis lectus, ut laoreet nibh
                     ligula vel dolor. Maecenas volutpat cursus dictum. Donec
                     varius lectus et leo auctor faucibus.</p>
-                </div> <!-- close review-body --> 
-            </div><!-- close review_item -->            
-        
-            <div class="review-item">
-                <div class="reviewer-listing">
-                    <div id="reviewer-wrap">
-                        <div id="reviewer-image">
-                            <img width="50" height="50" alt="#" src="{{ MEDIA_URL }}/images/Picture_Necklace_sml.jpg">
-                        </div><!-- close reviewer-image-->
-                        <div id="reviewer-details">
-                            <p>Na'ama Moran</p>
-                            <p class="location">San-Francisco, CA</p>
-                        </div><!-- close reviewer-details -->    
-                    </div><!-- close reviewer-wrap-->
-                    <div id="ratings"><img width: 60px src="{{ MEDIA_URL }}/images/stars.png"></div><!-- close ratings -->
-                </div><!-- close reviewer listing -->    
-                <div id="review-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit. Vivamus eleifend rutrum porta. Integer magna sem,
-                    ultricies nec ultricies suscipit, ullamcorper sit amet
-                    purus. Sed vulputate dolor in urna varius tempor. Sed
-                    elementum molestie elit at pharetra. Suspendisse nec
-                    imperdiet turpis. Nam vitae ante urna, sit amet luctus
-                    lorem. Integer eu turpis id urna imperdiet tempor sit
-                    amet vitae elit. Nullam viverra, arcu eget hendrerit
-                    fermentum, turpis odio convallis lectus, ut laoreet nibh
-                    ligula vel dolor. Maecenas volutpat cursus dictum. Donec
-                    varius lectus et leo auctor faucibus.</p>
-                </div> <!-- close review-body --> 
+                </div> <!-- close review-body -->
             </div><!-- close review_item -->
-                    
+
             <div class="review-item">
                 <div class="reviewer-listing">
                     <div id="reviewer-wrap">
@@ -96,10 +68,10 @@
                         <div id="reviewer-details">
                             <p>Na'ama Moran</p>
                             <p class="location">San-Francisco, CA</p>
-                        </div><!-- close reviewer-details -->    
+                        </div><!-- close reviewer-details -->
                     </div><!-- close reviewer-wrap-->
                     <div id="ratings"><img width: 60px src="{{ MEDIA_URL }}/images/stars.png"></div><!-- close ratings -->
-                </div><!-- close reviewer listing -->    
+                </div><!-- close reviewer listing -->
                 <div id="review-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit. Vivamus eleifend rutrum porta. Integer magna sem,
@@ -112,17 +84,45 @@
                     fermentum, turpis odio convallis lectus, ut laoreet nibh
                     ligula vel dolor. Maecenas volutpat cursus dictum. Donec
                     varius lectus et leo auctor faucibus.</p>
-                </div> <!-- close review-body --> 
-            </div><!-- close review_item -->            
+                </div> <!-- close review-body -->
+            </div><!-- close review_item -->
+
+            <div class="review-item">
+                <div class="reviewer-listing">
+                    <div id="reviewer-wrap">
+                        <div id="reviewer-image">
+                            <img width="50" height="50" alt="#" src="{{ MEDIA_URL }}/images/Picture_Necklace_sml.jpg">
+                        </div><!-- close reviewer-image-->
+                        <div id="reviewer-details">
+                            <p>Na'ama Moran</p>
+                            <p class="location">San-Francisco, CA</p>
+                        </div><!-- close reviewer-details -->
+                    </div><!-- close reviewer-wrap-->
+                    <div id="ratings"><img width: 60px src="{{ MEDIA_URL }}/images/stars.png"></div><!-- close ratings -->
+                </div><!-- close reviewer listing -->
+                <div id="review-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Vivamus eleifend rutrum porta. Integer magna sem,
+                    ultricies nec ultricies suscipit, ullamcorper sit amet
+                    purus. Sed vulputate dolor in urna varius tempor. Sed
+                    elementum molestie elit at pharetra. Suspendisse nec
+                    imperdiet turpis. Nam vitae ante urna, sit amet luctus
+                    lorem. Integer eu turpis id urna imperdiet tempor sit
+                    amet vitae elit. Nullam viverra, arcu eget hendrerit
+                    fermentum, turpis odio convallis lectus, ut laoreet nibh
+                    ligula vel dolor. Maecenas volutpat cursus dictum. Donec
+                    varius lectus et leo auctor faucibus.</p>
+                </div> <!-- close review-body -->
+            </div><!-- close review_item -->
         </div><!-- close reviews -->
-            
+
         </div><!-- close primary -->
-        
-    
+
+
         <div class="secondary">
             <div id="price">
                 $ {{ experience.price }} <a href="#"></a><!-- the href is for when we will quote in different currencies... thinking far ahead here :-) -->
-            </div><!-- close price -->    
+            </div><!-- close price -->
             <div id="buy-now" class="section">
                 <h2> How many people?</h2>
                 <span>
@@ -141,7 +141,7 @@
                 </span><br /><br />
                 <a href="google form goes here" id="book-now" class="button green">I want it!</a>
             </div><!-- close buy-now section -->
-            
+
             <div id="merchant-listing" class="section">
                 <div id="merchant-image">
                     {% comment %} <a title={{ merchant.name }} href="{% url merchant_profile merchant.id %}">{% endcomment %}
@@ -158,22 +158,24 @@
                     </ul>
                 </div>
             </div>
-            
+
             <div id="map">
-                <iframe width="320" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=6375+Nautilus+Dr+Boulder,+CO+80301&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=61.153041,92.988281&amp;vpsrc=0&amp;ie=UTF8&amp;hq=&amp;hnear=6375+Nautilus+Dr,+Boulder,+Colorado+80301&amp;ll=40.062308,-105.204048&amp;spn=0.016423,0.018024&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=6375+Nautilus+Dr+Boulder,+CO+80301&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=61.153041,92.988281&amp;vpsrc=0&amp;ie=UTF8&amp;hq=&amp;hnear=6375+Nautilus+Dr,+Boulder,+Colorado+80301&amp;ll=40.062308,-105.204048&amp;spn=0.016423,0.018024&amp;z=14&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+                <iframe width="320" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q={{ experience.address }}&amp;output=embed"></iframe>
+                <br />
+{#                <small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=6375+Nautilus+Dr+Boulder,+CO+80301&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=61.153041,92.988281&amp;vpsrc=0&amp;ie=UTF8&amp;hq=&amp;hnear=6375+Nautilus+Dr,+Boulder,+Colorado+80301&amp;ll=40.062308,-105.204048&amp;spn=0.016423,0.018024&amp;z=14&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>#}
             </div><!-- close map -->
-            
+
             <div id="exp-stats" class="section">
                 <p>Experience listed on {{ experience.pub_date }}</p>
                 <p>{{ experience.views }} views</p><!-- we don't have these attributes, make sure we add them. Ask Joseph how? -->
                 <p>{{ experience.wish_list_adds }} added this experience to their wish list</p>
                 <p><a href="#" title="report an experience">Report this experience</a></p>
             </div><!-- close exp_stats section -->
-            
+
         </div><!-- close secondary -->
     </article>
 {% endblock %}
-    
-    
 
-    
+
+
+
