Added new files/new tweaks

--- a/design/css/style.css
+++ b/design/css/style.css
@@ -56,20 +56,32 @@ table {
  */
 
 html {
-	background: url(../images/background.jpg);
 }
 
 body {
 	font-family: calluna-sans, "helvetica", "ariel", sans-serif;
-	font-size: 12pt;
+	font-size: 11pt;
+	background: #6c7585;
 	color: #7a7a7a;
 	line-height: 1.3;
 	text-shadow: 1px 1px 1px #ccc;
 }
 
+.secondary {
+	color: #999999;
+	font-size: 10pt;
+}
+
 #wrapper {
+	min-height: 600px;
+	background: url(../images/background.jpg);
+	padding: 40px 0 50px;
+	box-shadow: 0px 5px 3px #5d667c;
+}
+
+.wrapper-constrain {
 	width: 1000px;
-	padding: 40px 0 0 20px;
+	padding: 0 0 0 20px;
 }
 
 /*
@@ -117,9 +129,14 @@ p {
  */
 
 header {
-	background: #030f26;
-	padding: 20px 20px 8px;
+	background: #343d50;
 	border-bottom: 3px solid #a58ab3;
+}
+
+header .header-wrap {
+	background: #030f26;
+	width: 1000px;
+	padding: 20px 20px 8px;
 }
 
 #logo {
@@ -129,17 +146,18 @@ header {
 }
 
 #service-list {
-	width: 140px;
 	color: white;
 	text-shadow: 1px 1px #666666;
 	font-family: museo-sans-rounded;
-	text-align: right;
 	float: right;
 	position: relative;
+	background: #fe9e21;
+	margin-right: 20px;
+	font-size: 90%;
+	padding: 2px 4px;
 }
 
 #service-list:hover {
-	background: url(../images/service-list-hover.png) no-repeat;
 }
 
 #facebook-connect {
@@ -204,7 +222,10 @@ input, textarea {
 	border: 1px solid #999999;
 	box-shadow: 1px 1px #888888;
 	font: museo-sans-rounded; 
-	font-size: 110%;
+	font-size: 13pt;
+}
+
+input[type="text"], textarea {
 	width: 500px;
 }
 
@@ -229,6 +250,24 @@ input[type="radio"], input[type="checkbox"] {
 	height: 20px;
 }
 
+input[type="submit"] {
+	background: #60a01f;
+	font-size: 13pt;
+	color: white;
+	
+	padding: 4px 20px 4px;
+	box-shadow: 0px 0px 2px #7a7a7a;
+	margin: 0px;
+	border: white 1px solid;
+	border-radius: 3px;
+	font-family: museo-sans-rounded;
+	cursor: pointer;
+}
+
+input[type="submit"]:hover {
+	background: #50821d;
+}
+
 input:focus, textarea:focus {
 	border: 2px solid #0a9aaf;
 	margin: 1px 0px 4px;
@@ -241,19 +280,19 @@ input:focus, textarea:focus {
 	font-size: 90%;
 }
 
-.long {
+input.long {
 	width: 500px;
 }
 
-.medium {
+input.medium {
 	width: 300px;
 }
 
-.short {
+input.short {
 	width: 200px;
 }
 
-.shorter {
+input.shorter {
 	width: 120px;
 }
 
@@ -261,68 +300,40 @@ input:focus, textarea:focus {
 	height: 180px;
 }
 
-input[type="submit"].go-button {
-	width: 200px;
-	background: green;
-	color: white;
-}
-
 /**
  * Search-box
  */
-
-.textbox {
-	position: relative;
-	display: inline-block;
-	width: 200px;
-	border: 1px solid black;
-	border-radius: 5px;
-	border: 1px solid #999999;
-	box-shadow: 1px 1px #666666;
-	background: white;
-	margin: 0 7px;
-}
-
-.textbox-default {
-	position: absolute;
-	left: 10px;
-	top: 5px;
-	color: #aaaaaa;
-	text-shadow: 1px 1px #dddddd;
-	text-align: left;
-	font-size: 80%;
-}
-
 #search-box {
-	background: #52c4ff;
-	height: 70px;
-	padding-top: 35px;
-	border-radius: 15px;
-	width: 900px;
+	background: #0a9aaf;
+	padding: 20px 20px 10px;
+	border-radius: 5px;
+	width: 650px;
 	margin: 40px auto 50px;
-	font-size: 150%;
-	line-height: 1.4;
 	color: white;
-	text-align: center;
-	text-shadow: 1px 1px #7a7a7a;
+	text-align: left;
+	text-shadow: none;
+	box-shadow: 0px 0px 10px #666666;
 }
 
-#search-box-locale {
-	width: 250px;
+.search-box-tagline {
+	font-size: 130%;
+	border-bottom: 1px solid white;
+	padding: 2px 0 13px;
 }
 
-input#search-button {
-	background: #7ec437;
-	color: white;
-	padding: 5px 20px;
-	font-size: 10pt;
-	border: 3px solid white;
-	border-radius: 8px;
-	font-family: museo-sans-rounded;
-	font-size: 12pt;
+.search-box-form {
+	padding: 10px 0 0;
+	font-size: 120%;
 }
-.search-results {
 
+#search-box input[type="submit"] {
+	float: right;
+}
+
+#search-box input[type="text"] {
+	margin-left: 8px;
+	margin-right: 8px;
+	border: 1px solid white;
 }
 
 .search-result {
@@ -355,11 +366,8 @@ input#search-button {
  */
 
 footer {
-	height: 180px;
-	padding: 30px 20px;
-	margin-top: 50px;
-	background: #485367;
-	color: #DDD;
+	padding: 70px 0 40px 20px;
+	color: #FFFFFF;
 	text-shadow: none;
 	font-size: 90%;
 }
