--- a/design/css/style.css
+++ b/design/css/style.css
@@ -70,6 +70,7 @@ body {
 .secondary {
 	color: #999999;
 	font-size: 10pt;
+	text-shadow: 1px 1px 1px white;
 }
 
 .content-body {
@@ -91,7 +92,6 @@ body {
 .command-bar {
 	background: #a58ab3;
 	border-radius: 3px;
-	margin: 10px;
 	font-size: 12pt;
 	padding: 10px 20px;
 	color: white;
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	font-size: 150%;
-	margin:30px 0 10px 10px;
+	font-weight: bold;
 }
 
 h2 {
@@ -126,8 +126,17 @@ h3 {
 	font-size: 130%;
 }
 
+h4 {
+	font-size: 120%;
+}
+
 p {
 	margin: 0.5em 0 1em;
+}
+
+.dark h4 {
+	color: white;
+	text-shadow: none;
 }
 
 /*
@@ -145,16 +154,23 @@ p {
 }
 
 .two-col-left {
-	width: 600px;
+	width: 650px;
 	margin: 10px 10px 0 10px;
 }
 
 .two-col-right {
-	width: 350px;
+	width: 300px;
 	margin: 10px 20px 0 20px;
 	float: right;
 }
 
+.margin-top-10 {
+	margin-top: 10px;
+}
+
+.margin-top-30 {
+	margin-top: 30px;
+}
 /*
  * Header
  */
@@ -200,7 +216,6 @@ header .header-wrap {
 	background: url(../images/fb-login.png) no-repeat;
 	float: right;
 	position: relative;
-	margin-right: 20px;
 }
 
 /**
@@ -234,6 +249,22 @@ header .header-wrap {
 	text-align: center;
 	background: #0a9aaf;
 	float: right;
+	margin-top: 10px;
+}
+
+.page-nav ul {
+	float: right;
+}
+
+.page-nav ul li{
+	display: inline;
+	float: left;
+	margin-right: 10px;
+}
+
+.page-nav .active {
+	color: #0a9aaf;
+	font-weight: bold;
 }
 
 fieldset, .search-result, .panel {
@@ -245,6 +276,17 @@ fieldset, .search-result, .panel {
 	margin-bottom: 10px;
 	text-shadow: none;
 	vertical-align: bottom;
+}
+
+.search-result:hover {
+	border: 1px solid #cccccc;
+	box-shadow: 0px 0px 3px #999;
+	-moz-transition: box-shadow 0.5s;
+}
+
+fieldset:hover, .panel:hover {
+	border: 1px solid #cccccc;
+	-moz-transition: border 1s;
 }
 
 fieldset h3 {
@@ -308,9 +350,10 @@ select {
 }
 
 input[type="radio"], input[type="checkbox"] {
-	margin: 0 15px 0 0;
+	margin: 0 8px 0 0;
 	width: 20px;
 	height: 20px;
+	vertical-align: bottom;
 }
 
 input[type="submit"] {
@@ -320,8 +363,6 @@ input[type="submit"] {
 	
 	padding: 4px 20px 4px;
 	box-shadow: 0px 0px 2px #7a7a7a;
-	margin: 0px;
-	border: white 1px solid;
 	border-radius: 3px;
 	font-family: museo-sans-rounded;
 	cursor: pointer;
@@ -418,8 +459,12 @@ input.shorter {
 	float: right;
 }
 
-.eula {
-	
+/**
+ * Experiences page
+ */
+
+#action-bar {
+	background: #a58ab3;
 }
 
 /**
@@ -430,7 +475,6 @@ footer {
 	padding: 70px 0 40px 20px;
 	color: #FFFFFF;
 	text-shadow: none;
-	font-size: 90%;
 }
 
 .footer-constrain {
@@ -452,6 +496,69 @@ footer .copyright {
  */
 .clear {
 	clear: both;
+}
+
+/**
+ * Image carasoul
+ */
+
+#exp-main-image-outer {
+	border: 1px solid #EFEFEF;
+	background: white;
+	margin-bottom: 10px;
+	overflow: hidden;
+	height: 450px;
+	position: relative;
+}
+
+#exp-main-image-frame {
+	border: 5px solid white;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 440px;
+	width: 638px;
+}
+
+.bottom-pad {
+	height: 5px;
+	position: absolute;
+	top: 600px;
+	width: 100%;
+	background: red;
+}
+
+#exp-main-image {
+	position: relative;
+}
+
+#exp-main-image img {
+	border: 5px solid white;
+	position: absolute;
+}
+
+#exp-thumbs {
+	overflow: hidden;
+	position: relative;
+	margin-top: 3px;
+}
+
+.exp-thumbs-img {
+	width: 70px;
+	height: 70px;
+	cursor: pointer;
+	border: 3px solid white;
+	margin-right: 2px;
+}
+
+.primary #exp-thumbs ul {
+	list-style: none;
+	margin-top: 10px;
+	
+}
+
+.primary #exp-thumbs li {
+	float: left;
 }
 
 /**
