--- a/xperiences/merchants/templates/merchants/edit_experience.html
+++ b/xperiences/merchants/templates/merchants/edit_experience.html
@@ -5,7 +5,7 @@
 
 {% block wrapper %}
     {% block content %}
-        <form method='post'>
+        <form method='post' enctype="multipart/form-data">
             {{ form.as_p }}
             <input type='submit' value='save' />
         </form>
